# vgtk-template

./: .gitignore  Cargo.toml  README.md
docker/: Dockerfile.linux  Dockerfile.win  docker-compose.linux.yml
scripts/: app.info  vgtk
src/: icon.rc  main.rs
